--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             
         <div class="all">
             <div class="stickers_2023">
-                <a href="stickers.html">
+                <a href="stickers_2023.html">
                 <div  class="card">
                     <div class="image">
                         <img src="image annexe/stickers_2023/Sticker Pack.jpg" alt="mockup_stikcers">
